@@ -9,13 +9,33 @@ import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.api.artifacts.Configuration
 import org.gradle.api.artifacts.DependencySubstitution
+import org.gradle.api.artifacts.ExternalModuleDependency
+import org.gradle.api.artifacts.VersionCatalogsExtension
+import org.gradle.api.artifacts.component.ModuleComponentIdentifier
+import org.gradle.api.attributes.Bundling
 import org.gradle.api.artifacts.component.ModuleComponentSelector
+import org.gradle.api.logging.Logger
+import org.gradle.api.logging.StandardOutputListener
+import org.gradle.api.plugins.AppliedPlugin
+import org.gradle.api.tasks.JavaExec
+import org.gradle.api.tasks.testing.Test
+import org.gradle.api.tasks.testing.TestDescriptor
+import org.gradle.api.tasks.testing.TestListener
+import org.gradle.api.tasks.testing.TestOutputEvent
+import org.gradle.api.tasks.testing.TestOutputListener
+import org.gradle.api.tasks.testing.TestResult
+import java.io.File
 
 class ProjectPlugin : Plugin<Project> {
     @Suppress("UNCHECKED_CAST")
     override fun apply(project: Project) {
+        val mozilla = project.extensions.create("mozilla", ProjectExtension::class.java)
+        mozilla.androidComponentsProject.convention(false)
+        mozilla.ktlintSourcePaths.convention(emptyList())
+
         val extraProperties = project.gradle.extensions.extraProperties
         val mozconfig = extraProperties["mozconfig"] as Map<String, Any>
+        val topsrcdir = mozconfig["topsrcdir"] as String
         val topobjdir = mozconfig["topobjdir"] as String
         val substs = mozconfig["substs"] as Map<String, Any>
         val configureMavenRepositories = extraProperties["configureMavenRepositories"] as groovy.lang.Closure<*>
@@ -25,8 +45,57 @@ class ProjectPlugin : Plugin<Project> {
             maven { setUrl("${topobjdir}/gradle/maven") }
         }
 
+        configureBuildDirectory(project, topsrcdir, topobjdir)
+        configureJniKeepDebugSymbols(project)
+        configureKotlinCompilerMessageReformatting(project)
+        configureKotlinWarningsAsErrors(project)
+        configureAndroidBuildToolsVersion(project, substs)
+        configureKotlinJvmToolchain(project)
         configureAppServicesSubstitution(project, extraProperties, substs)
         configureGleanSubstitution(project, extraProperties)
+        configureGleanVersionResolution(project)
+        configureKtlint(project, mozilla)
+        configureTestOutputFormatting(project)
+        configurePackagingResourcesExcludes(project)
+        registerPrintVariantsTask(project)
+    }
+
+    // Initialize the project buildDir to be in ${topobjdir} to follow
+    // conventions of mozilla-central build system.
+    private fun configureBuildDirectory(project: Project, topsrcdir: String, topobjdir: String) {
+        val topSrcPath = File(topsrcdir).toPath()
+        val topObjPath = File(topobjdir).toPath()
+
+        val sourcePath = project.buildFile.toPath().parent
+        val relativePath = topSrcPath.relativize(sourcePath)
+
+        if (relativePath.startsWith("..")) {
+            // The project doesn't appear to be in topsrcdir so leave the
+            // buildDir alone.
+        } else {
+            // Transplant the project path into "${topobjdir}/gradle/build".
+            // This is consistent with existing gradle / taskcluster
+            // configurations but less consistent with the result of the
+            // non-gradle build system.
+            project.layout.buildDirectory.set(topObjPath.resolve("gradle/build").resolve(relativePath).toFile())
+        }
+    }
+
+    // This explicitly disables stripping of native libraries in our projects to match the existing
+    // implicit behaviour. Our projects do not specify the `ndkVersion` for our main Android builds
+    // and so stripping would otherwise fail with a warning. Note that gecko builds themselves will
+    // already strip the *.so files when compiled as release targets.
+    @Suppress("UNCHECKED_CAST")
+    private fun configureJniKeepDebugSymbols(project: Project) {
+        val action = Action<AppliedPlugin> {
+            val android = project.extensions.getByName("android")
+            val packagingOptions = android.javaClass.getMethod("getPackagingOptions").invoke(android)
+            val jniLibs = packagingOptions.javaClass.getMethod("getJniLibs").invoke(packagingOptions)
+            val keepDebugSymbols = jniLibs.javaClass.getMethod("getKeepDebugSymbols").invoke(jniLibs)
+            (keepDebugSymbols as MutableSet<String>).add("**/*.so")
+        }
+        project.pluginManager.withPlugin("com.android.library", action)
+        project.pluginManager.withPlugin("com.android.application", action)
     }
 
     private fun configureAppServicesSubstitution(
@@ -34,7 +103,13 @@ class ProjectPlugin : Plugin<Project> {
         extraProperties: org.gradle.api.plugins.ExtraPropertiesExtension,
         substs: Map<String, Any>,
     ) {
-        if (substs["MOZ_APPSERVICES_IN_TREE"].isTruthy()) {
+        // Only substitute when the a-s subprojects are part of this Gradle build:
+        // either :geckoview is included (so the a-s subprojects are too), or we're
+        // downloading every Gradle dependency. When m/a/fenix builds on its own
+        // (e.g., the second pass of a fat-AAR build), :geckoview isn't in settings
+        // and fenix consumes a-s as Maven AARs from target.maven.zip instead of
+        // maven.mozilla.org.
+        if (substs["MOZ_APPSERVICES_IN_TREE"].isTruthy() && (substs["DOWNLOAD_ALL_GRADLE_DEPENDENCIES"].isTruthy() || project.findProject(":geckoview") != null)) {
             // In tree, so we update our legacy "external" dep name to a local project.
             // e.g., "org.mozilla.appservices:syncmanager:X.Y.Z" becomes project(':syncmanager')
             substituteDependencies(project, APP_SERVICES_GROUPS) { group, module, dependency ->
@@ -101,9 +176,335 @@ class ProjectPlugin : Plugin<Project> {
         })
     }
 
+    private fun configureKotlinCompilerMessageReformatting(project: Project) {
+        // Kotlin compiler message formats:
+        // - Current: "e: file.kt:10:5 message" (colon-separated, used by fenix/focus/A-C)
+        // - Legacy:  "e: file.kt: (10, 5): message" (parenthesized, used by geckoview)
+        val messageFormats = listOf(
+            Regex("""([ew]): (.+):(\d+):(\d+) (.*)"""),
+            Regex("""([ew]): (.+): \((\d+), (\d+)\): (.*)"""),
+        )
+
+        project.tasks.configureEach {
+            if (!this::class.java.name.startsWith("org.jetbrains.kotlin.gradle.tasks.KotlinCompile")) {
+                return@configureEach
+            }
+
+            // Translate Kotlin messages like "w: ..." and "e: ..." into
+            // "...: warning: ..." and "...: error: ...", to make Treeherder understand.
+            val listener = StandardOutputListener { message ->
+                if (message.startsWith("e: warnings found")) {
+                    return@StandardOutputListener
+                }
+
+                if (message.startsWith("w: ") || message.startsWith("e: ")) {
+                    val match = messageFormats.firstNotNullOfOrNull { it.find(message) }
+                    if (match == null) {
+                        logger.quiet("kotlinc message format has changed!")
+                        // For warnings, don't continue because we don't want to throw an
+                        // exception. For errors, we want the exception so that the new error
+                        // message format gets translated properly.
+                        if (message.startsWith("w: ")) {
+                            return@StandardOutputListener
+                        }
+                    }
+                    match?.let {
+                        val (type, file, line, column, msg) = it.destructured
+                        val level = if (type == "w") "warning" else "error"
+                        // Use logger.lifecycle, which does not go through stderr again.
+                        logger.lifecycle("$file:$line:$column: $level: $msg")
+                    }
+                }
+            }
+
+            doFirst {
+                logging.addStandardErrorListener(listener)
+            }
+            doLast {
+                logging.removeStandardErrorListener(listener)
+            }
+        }
+    }
+
+    private fun configureKotlinWarningsAsErrors(project: Project) {
+        project.tasks.configureEach {
+            if (!this::class.java.name.startsWith("org.jetbrains.kotlin.gradle.tasks.KotlinCompile")) {
+                return@configureEach
+            }
+            val compilerOptions = this::class.java.getMethod("getCompilerOptions").invoke(this)
+            val allWarningsAsErrors = compilerOptions::class.java.getMethod("getAllWarningsAsErrors").invoke(compilerOptions)
+            allWarningsAsErrors::class.java.getMethod("set", Any::class.java).invoke(allWarningsAsErrors, true)
+        }
+    }
+
+    private fun configureAndroidBuildToolsVersion(project: Project, substs: Map<String, Any>) {
+        val buildToolsVersion = substs["ANDROID_BUILD_TOOLS_VERSION"] as String
+
+        // Use android plugin id string and reflection to avoid classloader isolation issues
+        project.pluginManager.withPlugin("com.android.base") {
+            val android = project.extensions.findByName("android") ?: return@withPlugin
+            android::class.java.getMethod("setBuildToolsVersion", String::class.java)
+                .invoke(android, buildToolsVersion)
+        }
+    }
+
+    private fun configureKotlinJvmToolchain(project: Project) {
+        // Wait for Android plugin first to ensure Java plugin extension exists
+        project.pluginManager.withPlugin("com.android.base") {
+            project.pluginManager.withPlugin("org.jetbrains.kotlin.android") {
+                val kotlin = project.extensions.findByName("kotlin") ?: return@withPlugin
+                val config = project.rootProject.extensions.extraProperties["config"] ?: return@withPlugin
+                val jvmTargetCompatibility = config.javaClass.getField("jvmTargetCompatibility").get(config) as Int
+                kotlin::class.java.getMethod("jvmToolchain", Integer.TYPE)
+                    .invoke(kotlin, jvmTargetCompatibility)
+            }
+        }
+    }
+
+    private fun configureGleanVersionResolution(project: Project) {
+        // Dependencies can't depend on a different major version of Glean than A-C itself.
+        val action = Action<AppliedPlugin> {
+            val versionCatalogs = project.extensions.getByType(VersionCatalogsExtension::class.java)
+            val libs = versionCatalogs.named("libs")
+            val gleanVersion = libs.findVersion("glean").get().requiredVersion
+
+            project.configurations.configureEach {
+                resolutionStrategy {
+                    eachDependency {
+                        if (requested.group == "org.mozilla.telemetry" && requested.name.contains("glean")) {
+                            val requestedMajor = requested.version?.split(".")?.firstOrNull()
+                            val definedMajor = gleanVersion.split(".").firstOrNull()
+                            // Check the major version
+                            if (requestedMajor != definedMajor) {
+                                throw AssertionError(
+                                    "Cannot resolve to a single Glean version. " +
+                                        "Requested: ${requested.version}, version catalog defines: $gleanVersion"
+                                )
+                            } else {
+                                // Enforce that all (transitive) dependencies are using the defined Glean version
+                                useVersion(gleanVersion)
+                            }
+                        }
+                    }
+                    capabilitiesResolution {
+                        withCapability("org.mozilla.telemetry:glean-native") {
+                            val toBeSelected = candidates.find {
+                                it.id is ModuleComponentIdentifier &&
+                                    (it.id as ModuleComponentIdentifier).module.contains("geckoview")
+                            }
+                            if (toBeSelected != null) {
+                                select(toBeSelected)
+                            }
+                            because("use GeckoView Glean instead of standalone Glean")
+                        }
+                    }
+                }
+            }
+        }
+        project.pluginManager.withPlugin("com.android.library", action)
+        project.pluginManager.withPlugin("com.android.application", action)
+    }
+
     companion object {
         private const val LOCAL_SNAPSHOT_VERSION = "0.0.1-SNAPSHOT-+"
         private val APP_SERVICES_GROUPS = setOf("org.mozilla.appservices", "org.mozilla.appservices.nightly")
         private val GLEAN_GROUPS = setOf("org.mozilla.telemetry")
+    }
+
+    private fun configureKtlint(project: Project, mozilla: ProjectExtension) {
+        val sourcePaths = mozilla.ktlintSourcePaths
+
+        val ktlintConfig = project.configurations.create("ktlint")
+
+        val ktlintDep = project.provider {
+            val versionCatalogs = project.extensions.getByType(VersionCatalogsExtension::class.java)
+            val libs = versionCatalogs.named("libs")
+            val dep = project.dependencies.create(libs.findLibrary("ktlint").get().get())
+            if (dep is ExternalModuleDependency) {
+                dep.attributes {
+                    attribute(Bundling.BUNDLING_ATTRIBUTE, project.objects.named(Bundling::class.java, Bundling.EXTERNAL))
+                }
+            }
+            dep
+        }
+        ktlintConfig.dependencies.addLater(ktlintDep)
+
+        // Resolve the include/exclude globs (with leading "!" meaning exclude)
+        // into a FileTree rooted at projectDir, so Gradle can use the actual
+        // Kotlin source set to compute UP-TO-DATE / build cache keys.
+        fun ktlintSourceTree() = project.fileTree(project.projectDir).matching {
+            sourcePaths.get().forEach { pattern ->
+                if (pattern.startsWith("!")) {
+                    exclude(pattern.removePrefix("!"))
+                } else {
+                    include(pattern)
+                }
+            }
+        }
+
+        project.tasks.register("ktlint", JavaExec::class.java) {
+            group = "verification"
+            description = "Check Kotlin code style."
+            classpath = ktlintConfig
+            mainClass.set("com.pinterest.ktlint.Main")
+            onlyIf { sourcePaths.get().isNotEmpty() }
+            sourcePaths.get().forEach { args(it) }
+            args("--reporter=json,output=build/reports/ktlint/ktlint.json")
+            args("--reporter=plain")
+            inputs.files(ktlintSourceTree())
+                .withPropertyName("ktlintSources")
+                .withPathSensitivity(org.gradle.api.tasks.PathSensitivity.RELATIVE)
+                .skipWhenEmpty()
+            outputs.file(project.file("build/reports/ktlint/ktlint.json"))
+                .withPropertyName("ktlintReport")
+            outputs.cacheIf { true }
+        }
+
+        project.tasks.register("ktlintFormat", JavaExec::class.java) {
+            group = "formatting"
+            description = "Fix Kotlin code style deviations."
+            classpath = ktlintConfig
+            mainClass.set("com.pinterest.ktlint.Main")
+            onlyIf { sourcePaths.get().isNotEmpty() }
+            args("-F")
+            sourcePaths.get().forEach { args(it) }
+            args("--reporter=json,output=build/reports/ktlint/ktlintFormat.json")
+            args("--reporter=plain")
+            jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+            inputs.files(ktlintSourceTree())
+                .withPropertyName("ktlintFormatSources")
+                .withPathSensitivity(org.gradle.api.tasks.PathSensitivity.RELATIVE)
+                .skipWhenEmpty()
+            outputs.file(project.file("build/reports/ktlint/ktlintFormat.json"))
+                .withPropertyName("ktlintFormatReport")
+        }
+    }
+
+    // Translates JUnit test events into Mozilla's TBPL-like textual format that Taskcluster
+    // log parsing expects. See also: testing/mozbase/mozlog/mozlog/formatters/tbplformatter.py
+    private fun configureTestOutputFormatting(project: Project) {
+        project.pluginManager.withPlugin("com.android.base") {
+            project.tasks.withType(Test::class.java).configureEach {
+                systemProperty("robolectric.logging", "stdout")
+                systemProperty("logging.test-mode", "true")
+                systemProperty("javax.net.ssl.trustStoreType", "JKS")
+
+                testLogging.events = emptySet()
+
+                val listener = MozillaTestOutputListener(logger)
+                addTestListener(listener)
+                addTestOutputListener(listener)
+            }
+        }
+    }
+
+    @Suppress("UNCHECKED_CAST")
+    private fun configurePackagingResourcesExcludes(project: Project) {
+        val action = Action<AppliedPlugin> {
+            val android = project.extensions.getByName("android")
+            val packagingOptions = android.javaClass.getMethod("getPackagingOptions").invoke(android)
+            val resources = packagingOptions.javaClass.getMethod("getResources").invoke(packagingOptions)
+            val excludes = resources.javaClass.getMethod("getExcludes").invoke(resources) as MutableSet<String>
+            excludes.addAll(listOf("META-INF/LICENSE.md", "META-INF/LICENSE-notice.md"))
+        }
+        project.pluginManager.withPlugin("com.android.library", action)
+        project.pluginManager.withPlugin("com.android.application", action)
+    }
+
+    @Suppress("UNCHECKED_CAST")
+    private fun registerPrintVariantsTask(project: Project) {
+        project.pluginManager.withPlugin("com.android.application") {
+            val android = project.extensions.getByName("android")
+            val outputFile = project.file("build/printVariants.json")
+
+            project.tasks.register("printVariants") {
+                val variants = project.provider {
+                    val applicationVariants = android.javaClass
+                        .getMethod("getApplicationVariants").invoke(android) as Iterable<*>
+
+                    applicationVariants.map { variant ->
+                        val outputs = variant!!.javaClass
+                            .getMethod("getOutputs").invoke(variant) as Iterable<*>
+                        val buildType = variant.javaClass
+                            .getMethod("getBuildType").invoke(variant)
+                        val buildTypeName = buildType!!.javaClass
+                            .getMethod("getName").invoke(buildType) as String
+                        val variantName = variant.javaClass
+                            .getMethod("getName").invoke(variant) as String
+
+                        mapOf(
+                            "apks" to outputs.map { output ->
+                                val filterMethod = output!!.javaClass.getMethod(
+                                    "getFilter", String::class.java
+                                )
+                                val abi = filterMethod.invoke(output, "ABI") as String?
+                                    ?: "universal"
+                                val outputFileObj = output.javaClass
+                                    .getMethod("getOutputFile").invoke(output) as java.io.File
+                                mapOf(
+                                    "abi" to abi,
+                                    "fileName" to outputFileObj.name
+                                )
+                            },
+                            "build_type" to buildTypeName,
+                            "name" to variantName
+                        )
+                    }.toMutableList()
+                }
+
+                outputs.file(outputFile)
+
+                doLast {
+                    val variantsList = variants.get()
+                    variantsList.add(
+                        mapOf(
+                            "apks" to listOf(
+                                mapOf(
+                                    "abi" to "noarch",
+                                    "fileName" to "app-debug-androidTest.apk"
+                                )
+                            ),
+                            "build_type" to "androidTest",
+                            "name" to "androidTest"
+                        )
+                    )
+                    outputFile.parentFile.mkdirs()
+                    outputFile.writeText(groovy.json.JsonOutput.toJson(variantsList))
+                    logger.debug("Wrote variant info to $outputFile")
+                }
+            }
+        }
+    }
+}
+
+private class MozillaTestOutputListener(
+    private val taskLogger: Logger,
+) : TestListener, TestOutputListener {
+    override fun beforeSuite(suite: TestDescriptor) {
+        if (suite.className != null) {
+            println("\nSUITE: ${suite.className}")
+        }
+    }
+
+    override fun afterSuite(suite: TestDescriptor, result: TestResult) {}
+
+    override fun beforeTest(testDescriptor: TestDescriptor) {
+        println("  TEST: ${testDescriptor.name}")
+    }
+
+    override fun afterTest(testDescriptor: TestDescriptor, result: TestResult) {
+        when (result.resultType) {
+            TestResult.ResultType.SUCCESS -> println("  SUCCESS")
+            TestResult.ResultType.FAILURE -> {
+                val testId = "${testDescriptor.className}.${testDescriptor.name}"
+                println("  TEST-UNEXPECTED-FAIL | $testId | ${result.exception}")
+            }
+            TestResult.ResultType.SKIPPED -> println("  SKIPPED")
+        }
+        taskLogger.lifecycle("")
+    }
+
+    override fun onOutput(testDescriptor: TestDescriptor, outputEvent: TestOutputEvent) {
+        taskLogger.lifecycle("    ${outputEvent.message.trim()}")
     }
 }
